--- a/src/public/sender.html
+++ b/src/public/sender.html
@@ -172,6 +172,11 @@
             </div>
         `
         notificationContainer.appendChild(div)
+
+        const requestOrderButton = document.getElementById('requestBtn')
+
+        requestOrderButton.innerHTML = 'request'
+        requestOrderButton.classList.remove('disabled')
     })
 </script>
 </html>
